# C

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  TreeIterators.cpp  TreeIterators.h  main.cpp
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: CMakeLists.txt  SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab6/wordcounter/: WordCounter.cpp  WordCounter.h  main.cpp
lab7/: CMakeLists.txt
lab7/figury/: CMakeLists.txt  Kolo.cpp  Kolo.h  Ksztalt.cpp  Ksztalt.h  Kwadrat.cpp  Kwadrat.h  Trojkat.cpp  Trojkat.h  main.cpp
lab7/point3d/: Point.cpp  Point.h  Point3d.cpp  Point3d.h  main.cpp
lab8/: CMakeLists.txt
lab8/moviesubtitles/: MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
lab9/academiaserializer/: CMakeLists.txt  Serialization.cpp  Serialization.h  main.cpp
(+2 files in other folders)
